Hay que repartir las cartas a la mano de cierto jugador